# Infotainment-Project

./: .gitignore  CMakeLists.txt  README.md
config/: application.json
src/client/: Client.cpp  Client.hpp  main_client.cpp
src/common/: Constants.hpp
src/server/: Server.cpp  Server.hpp  main_server.cpp
